alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2646,6 +2646,7 @@
 			float: left;
 			max-width: 40%;
 			height: 100%;
+			width: 100%;
 			padding-right: .5em;
 		}
 
